--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,7 @@ matrix:
     # - php: 5.6
     #   env: WP_TRAVISCI=travis:js-tests
     - php: 7.2
-      env: WP_TRAVISCI=travis:php-lint
-
-
+      env: WP_TRAVISCI=phpcs
 
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
