--- a/.travis.yml
+++ b/.travis.yml
@@ -23,11 +23,11 @@ matrix:
     # - php: 5.6
     #   env: WP_VERSION=latest WP_MULTISITE=0 WP_TRAVISCI=travis:phpunit
     # - php: 7.2
-    #   env: WP_VERSION=latest WP_MULTISITE=1 WP_TRAVISCI=travis:phpunit
+    #   env: WP_VERSION=latest WP_MULTISITE=1 WP_TRAVISCI=phpcs
     # - php: 5.6
     #   env: WP_TRAVISCI=travis:js-tests
-    - php: 7.2
-      env: WP_TRAVISCI=phpcs
+    - php: 7.1
+      env: WP_VERSION=latest WP_MULTISITE=0 WP_TRAVISCI=phpcs
 
 before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
