--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,6 @@ branches:
   only:
     - master
     - develop
-    - fix/wordpress-coding-standards
 
 cache:
   directories:
@@ -45,6 +44,7 @@ before_script:
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
       composer global require wp-coding-standards/wpcs
+      composer global require phpcompatibility/php-compatibility
       phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs
     fi
 
