--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,11 @@
 			"homepage": "https://github.com/lusionlabs/wp-personalize/graphs/contributors"
 		}
 	],
-	"require": {
-		"wp-coding-standards/wpcs": "1.*",
-		"phpcompatibility/phpcompatibility-wp": "^1"
-	},
 	"require-dev": {
 		"php": ">=5.4",
 		"squizlabs/php_codesniffer": "^3.3.1",
+		"wp-coding-standards/wpcs": "1.*",
+		"phpcompatibility/phpcompatibility-wp": "^1",
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.5.0"
 	},
 	"minimum-stability": "dev",
