--- a/.travis.yml
+++ b/.travis.yml
@@ -43,17 +43,11 @@ before_script:
     fi
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
-      composer global require wp-coding-standards/wpcs
-      composer global require phpcompatibility/php-compatibility
-      phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs, $HOME/.composer/vendor/phpcompatibility/php-compatibility
+      composer global require wp-coding-standards/wpcs,phpcompatibility/php-compatibility
+      phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs,$HOME/.composer/vendor/phpcompatibility/php-compatibility
     fi
 
 script:
-  - |
-    if [[ ! -z "$WP_VERSION" ]] ; then
-      phpunit
-      WP_MULTISITE=1 phpunit
-    fi
   - |
     if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
       phpcs --show-config
