--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: false
 dist: trusty
 
 language: php
+php:
+  - 7.1.9
 
 notifications:
   email:
@@ -39,9 +41,9 @@ before_script:
     fi
   - |
     if [[ "$WP_TRAVISCI" == "lint:php" ]] ; then
-    composer install
-      composer global require wp-coding-standards/wpcs,phpcompatibility/php-compatibility
+      composer global require "squizlabs/php_codesniffer,wp-coding-standards/wpcs,phpcompatibility/php-compatibility"
       phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs,$HOME/.composer/vendor/phpcompatibility/php-compatibility
+      phpcs --version
     fi
 
 script:
