Updates Travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,12 +43,12 @@ before_script:
   #   else
   #     echo "xdebug.ini does not exist"
   #   fi
-  # - |
-  #   if [[ "$WP_TRAVISCI" == "lint:php" ]] ; then
-  #     composer global require "squizlabs/php_codesniffer=*,wp-coding-standards/wpcs=*,phpcompatibility/php-compatibility=*"
-  #     phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs,$HOME/.composer/vendor/phpcompatibility/php-compatibility
-  #     phpcs --version
-  #   fi
+  - |
+    if [[ "$WP_TRAVISCI" == "lint:php" ]] ; then
+      composer global require "squizlabs/php_codesniffer=*,wp-coding-standards/wpcs=*,phpcompatibility/php-compatibility=*"
+      phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs,$HOME/.composer/vendor/phpcompatibility/php-compatibility
+      phpcs --version
+    fi
 
 script:
   - |
