Updates Travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,11 +47,10 @@ before_script:
     if [[ "$WP_TRAVISCI" == "lint:php" ]] ; then
       composer global require "squizlabs/php_codesniffer=*,wp-coding-standards/wpcs=*,phpcompatibility/php-compatibility=*"
       phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs,$HOME/.composer/vendor/phpcompatibility/php-compatibility
-      phpcs --version
     fi
 
 script:
   - |
     if [[ "$WP_TRAVISCI" == "lint:php" ]] ; then
-      phpcs --show-config
+      phpcs .
     fi
