--- a/.travis.yml
+++ b/.travis.yml
@@ -46,11 +46,11 @@ before_script:
   - |
     if [[ "$WP_TRAVISCI" == "lint:php" ]] ; then
       composer global require "squizlabs/php_codesniffer=*,wp-coding-standards/wpcs=*,phpcompatibility/php-compatibility=*"
-      phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs,$HOME/.composer/vendor/phpcompatibility/php-compatibility
+      phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs,vendor/phpcompatibility/php-compatibility
     fi
 
 script:
   - |
     if [[ "$WP_TRAVISCI" == "lint:php" ]] ; then
-      phpcs .
+      --basepath=../ --report-source
     fi
