--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,8 @@ before_script:
   #   fi
   - |
     if [[ "$WP_TRAVISCI" == "lint:php" ]] ; then
-      composer global require "squizlabs/php_codesniffer=*,wp-coding-standards/wpcs=*,phpcompatibility/php-compatibility=*"
+      composer require squizlabs/php_codesniffer:dev-master
+      composer global require "squizlabs/php_codesniffer:dev-master,wp-coding-standards/wpcs,phpcompatibility/php-compatibility"
       phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs,vendor/phpcompatibility/php-compatibility
     fi
 
