--- a/.travis.yml
+++ b/.travis.yml
@@ -46,12 +46,12 @@ before_script:
   - |
     if [[ "$WP_TRAVISCI" == "lint:php" ]] ; then
       composer require squizlabs/php_codesniffer:dev-master
-      composer global require "squizlabs/php_codesniffer:dev-master,wp-coding-standards/wpcs,phpcompatibility/php-compatibility"
+      composer global require "squizlabs/php_codesniffer,wp-coding-standards/wpcs,phpcompatibility/php-compatibility"
       phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs,vendor/phpcompatibility/php-compatibility
     fi
 
 script:
   - |
     if [[ "$WP_TRAVISCI" == "lint:php" ]] ; then
-      --basepath=../ --report-source
+      phpcs --basepath=../ --report-summary .
     fi
