--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: trusty
 
 language: php
 php:
-  - 7.2
+  - 7.0
 
 notifications:
   email:
@@ -45,7 +45,6 @@ before_script:
   #   fi
   - |
     if [[ "$WP_TRAVISCI" == "lint:php" ]] ; then
-      composer require squizlabs/php_codesniffer:dev-master
       composer global require "squizlabs/php_codesniffer,wp-coding-standards/wpcs,phpcompatibility/php-compatibility"
       phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs,vendor/phpcompatibility/php-compatibility
     fi
@@ -53,5 +52,5 @@ before_script:
 script:
   - |
     if [[ "$WP_TRAVISCI" == "lint:php" ]] ; then
-      phpcs --basepath=../ --report-summary .
+      vendor/bin/phpcs --basepath=../ --report-summary .
     fi
