--- a/.travis.yml
+++ b/.travis.yml
@@ -34,19 +34,10 @@ matrix:
 before_script:
   - composer install
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  - which composer
-  - ./vendor/bin/phpcs --version
-  # - which phpcs
-  # - |
-  #   if [ -f ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini ]; then
-  #     phpenv config-rm xdebug.ini
-  #   else
-  #     echo "xdebug.ini does not exist"
-  #   fi
+  #- composer global require "squizlabs/php_codesniffer,wp-coding-standards/wpcs,phpcompatibility/php-compatibility"
   - |
     if [[ "$WP_TRAVISCI" == "lint:php" ]] ; then
-      composer global require "squizlabs/php_codesniffer,wp-coding-standards/wpcs,phpcompatibility/php-compatibility"
-      phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs,vendor/phpcompatibility/php-compatibility
+      vendor/bin/phpcs/phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs,vendor/phpcompatibility/php-compatibility
     fi
 
 script:
