--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,16 @@
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.5.0"
 	},
 	"minimum-stability": "dev",
-    "prefer-stable" : true,
+	"prefer-stable" : true,
+	"scripts" : {
+		"post-install-cmd": [
+            "vendor/bin/phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs,vendor/phpcompatibility/php-compatibility",
+			"vendor/bin/phpcs --config-set default_standard WP-Engine",
+			"vendor/bin/phpcs --config-set show_progress 1 > /dev/null 2>&1",
+			"vendor/bin/phpcs --config-set colors 1 > /dev/null 2>&1",
+			"vendor/bin/phpcs -i"
+        ]
+	},
 	"support": {
 		"issues": "https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards/issues",
 		"wiki": "https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards/wiki",
